# sonic-swss-dev

./: .gitattributes  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  build.sh  docker-compose.yml  googletest-post-deb-extract  install-pkg.sh  libhiredis-dev-post-deb-extract  mock_orch.cpp  mock_sai.cpp  package.cfg  redis.conf  start_redis.sh  stop_redis.sh  tasks.vs.bat  test_aclorch.cpp  test_arch.txt
cmake/: FindPython.cmake
patch/: swss-aclorch.diff  swss-copporch.diff  swss-crmorch.diff  swss-pfcwdorch.diff  swss_pfcwdorch.diff
syncd-tests/: .clang-format  condition_variable_test.cpp  main.cpp  mock_sai_redis.h  mock_sai_vs.h  mock_saihelper.cpp  mock_syncd.cpp  mock_syncd.h  mock_syncd_applyview.cpp  mock_syncd_flex_counter.cpp  mock_syncd_hard_reinit.cpp  mock_syncd_notifications.cpp  mock_syncd_saiswitch.cpp  sai_redis_metadata.cpp  sai_vs_metadata.cpp  syncd_tests.cpp
tests/: aclorch_ut.DEPRECATED.cpp  aclorch_ut.cpp  check.h  copporch_ut.cpp  fake_main.DEPRECATED.cpp  mock_aclorch.h  mock_crmorch.h  portal.h  qosorch_ut.cpp  saispy.h  saispy_ut.DEPRECATED.cpp  spec_auto_config.h.in  test_aclorch.cpp  test_copporch.cpp  test_qosorch.cpp  ut_helper.h
